add python packages install

--- a/10:24:AlexMNIST/MNIST ML math presentation.ipynb
+++ b/10:24:AlexMNIST/MNIST ML math presentation.ipynb
@@ -11,6 +11,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Installing python and all the various packages.\n",
+    "\n",
+    "\n",
+    "Python is a great language for machine learning but installing all the packages and figuring out dependencies can be a little annoying sometimes. Here's a brief intro to how to do this:\n",
+    "\n",
+    "- Download the anaconda pyton distribution https://www.continuum.io/downloads - this is basic a bundled distrubution of the various python scientific packages (numpy, scipy, pandas, sklearn). Once you installed anaconda you can go to the terminal/command line and type \n",
+    "\n",
+    "     `jupyter notebook`\n",
+    "\n",
+    "and press enter - you should get an empty notebook like this one where you can type code and text.\n",
+    "\n",
+    "To install the deep learning stuff you'll need to install tensorflow (or theano) and keras:\n",
+    "\n",
+    "- If you want to use tensorflow run the following command from the terminal - this might only work for mac or linux:\n",
+    "\n",
+    "    `conda install -c jjhelmus tensorflow=0.10.0rc0`\n",
+    "    \n",
+    "    \n",
+    "- Finally install keras running \n",
+    "\n",
+    "    `pip install keras`\n",
+    "    \n",
+    "from the terminal.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Loading in the packges and data:"
    ]
   },
